--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html lang="ja">
+/*test*/
+ <!DOCTYPE html>
+ <html lang="ja">
   <head>
    <meta charset="utf-8">
    <title>Gitチュートリアル</title>
